--- a/src/docs/pallete.stories.mdx
+++ b/src/docs/pallete.stories.mdx
@@ -1,12 +1,17 @@
 import { ColorPaletteReference } from "../../src/utils/colorPaletteRef";
 import { Meta } from "@storybook/blocks";
 
-<Meta title="Design Tokens/Pallete" />
+<Meta title="Design Tokens/Tailwind Palette" />
 
-# Colors
+# Tailwind Color Palette
 
-The design system color palette consisting of a collection of color scales in a
-range of contrast ratios from the background color.
+The design system color Palette.
+This is the default Color Palette Provided By Tailwind.
+
+[Tailwind Docs &rarr;](https://tailwindcss.com/docs/customizing-colors)
+
+---
+
 
 ## Color Palette
 
