chore: husky setup test

--- a/src/docs/colors.stories.mdx
+++ b/src/docs/colors.stories.mdx
@@ -3,6 +3,7 @@ import { ColorItem, ColorPalette, Meta } from "@storybook/blocks";
 <Meta title="Design Tokens/Colors" />
 
 # Colors
+<div class='lastmod'>Last modified: ...</div>
 
 The design system color palette consisting of a collection of color scales in a
 range of contrast ratios from the background color.
