--- a/src/docs/colors.stories.mdx
+++ b/src/docs/colors.stories.mdx
@@ -1,9 +1,10 @@
 import { ColorItem, ColorPalette, Meta } from "@storybook/blocks";
 
 <Meta title="Design Tokens/Colors" />
-<div>Last modified: 2024-01-17</div>
 
 # Colors
+2024-01-17</div>
+
 
 The design system color palette consisting of a collection of color scales in a
 range of contrast ratios from the background color.
