--- a/src/docs/pallete.stories.mdx
+++ b/src/docs/pallete.stories.mdx
@@ -4,6 +4,7 @@ import { Meta } from "@storybook/blocks";
 <Meta title="Design Tokens/Tailwind Palette" />
 
 # Tailwind Color Palette
+2024-01-17</div>
 
 The design system color Palette.
 This is the default Color Palette Provided By Tailwind.
