--- a/src/docs/iconography.stories.mdx
+++ b/src/docs/iconography.stories.mdx
@@ -4,7 +4,7 @@ import { icons } from "lucide-react";
 <Meta title="Design Tokens/Iconography" />
 
 # Iconography
-2024-01-17</div>
+<div className='float-right italics bg-muted'>Last modified: 2024-01-17</div>
 These icons are derived from `lucide-react` 
 ---
 ## Usage 
