--- a/src/docs/colors.stories.mdx
+++ b/src/docs/colors.stories.mdx
@@ -3,7 +3,7 @@ import { ColorItem, ColorPalette, Meta } from "@storybook/blocks";
 <Meta title="Design Tokens/Colors" />
 
 # Colors
-2024-01-17</div>
+<div className='float-right italics bg-muted'>Last modified: 2024-01-17</div>
 
 
 The design system color palette consisting of a collection of color scales in a
