--- a/src/docs/spacing.stories.mdx
+++ b/src/docs/spacing.stories.mdx
@@ -4,7 +4,7 @@ import { SpacingScale } from "../utils/spacing";
 <Meta title="Design Tokens/Spacing" />
 
 # Tailwind Spacing 
-2024-01-17</div>
+<div className='float-right italics bg-muted'>Last modified: 2024-01-17</div>
 
 The design system for spacing.
 This is the default Spacing Provided By Tailwind.
