--- a/src/docs/pallete.stories.mdx
+++ b/src/docs/pallete.stories.mdx
@@ -1,10 +1,10 @@
-import { ColorPaletteReference } from "../../src/utils/colorPaletteRef";
+import { ColorPaletteReference } from "./utils/colorPaletteRef";
 import { Meta } from "@storybook/blocks";
 
 <Meta title="Design Tokens/Tailwind Palette" />
 
 # Tailwind Color Palette
-<div className='float-right italics bg-muted'>Last modified: 2024-01-17</div>
+<div className='float-right italics bg-muted'>Last modified: 2024-01-19</div>
 
 The design system color Palette.
 This is the default Color Palette Provided By Tailwind.
