--- a/src/docs/iconography.stories.mdx
+++ b/src/docs/iconography.stories.mdx
@@ -4,7 +4,7 @@ import { icons } from "lucide-react";
 <Meta title="Design Tokens/Iconography" />
 
 # Iconography
-<div className='float-right italics bg-muted'>Last modified: 2024-01-17</div>
+<div className='float-right italics bg-muted'>Last modified: 2024-01-19</div>
 These icons are derived from `lucide-react` 
 ---
 ## Usage 
@@ -37,8 +37,8 @@ export default App;
   {Object.entries(icons).map(([name], i) => {
     const LucideIcon = icons[name];
     return (
-      <IconItem name={name} key={i} >
-        <LucideIcon key={i} size={24} className={"m-11"} />
+      <IconItem name={name} >
+        <LucideIcon key={i} size={24}/>
       </IconItem>
     );
   })}
